Update HTML to use GitHub raw links for custom CSS and JS files

--- a/qualtrics/question.html
+++ b/qualtrics/question.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="https://cdn.addpipe.com/2.0/pipe.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-<link rel="stylesheet" href="https://d2kltgp8v5sml0.cloudfront.net/templates/qualtrics-addpipe-custom.css" />
+<link rel="stylesheet" href="https://raw.githubusercontent.com/raahish/pipe-screen-sharing/refs/heads/master/public/custom-css.css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 <script type="text/javascript" src="https://cdn.addpipe.com/2.0/pipe.js"></script>
 <script type="text/javascript"
-    src="https://d2kltgp8v5sml0.cloudfront.net/templates/static/qualtrics-addpipe-custom-secure.js"></script><br>
+    src="https://raw.githubusercontent.com/raahish/pipe-screen-sharing/refs/heads/master/public/custom-secure.js"></script><br>
 <div id="VQ11"></div>
 <div id="permission" class="modal" data-backdrop="static" data-keyboard="false" style="display: none">
     <div class="record-answer"><img src="https://d2kltgp8v5sml0.cloudfront.net/templates/svg/selfie.gif" /></div>
