Enable screen+camera recording with AddPipe's built-in flow
- Set sis: 0 to show initial screen with Record Screen option
- Removed CSS hiding camera/mic containers
- Simplified dynamic styling in getCamAccess()
- Updated instruction modal with correct user flow:
  1. Click Record Screen
  2. Select screen to share
  3. Click Add Camera for picture-in-picture
  4. Record

--- a/qualtrics/question.html
+++ b/qualtrics/question.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="https://cdn.addpipe.com/2.0/pipe.js"></script>
 <script type="text/javascript"
     src="https://cdn.jsdelivr.net/gh/raahish/pipe-screen-sharing@master/public/custom-secure.js"></script><br>
-<div id="VQ11"></div>
+<div id="VQ1"></div>
 <div id="permission" class="modal" data-backdrop="static" data-keyboard="false" style="display: none">
     <div class="record-answer"><img src="https://d2kltgp8v5sml0.cloudfront.net/templates/svg/selfie.gif" /></div>
     <div class="record-title" id="perm-title">Let's Record Your Answer.</div>
@@ -20,9 +20,11 @@
     <div class="record-title">How to Record!</div>
     <div class="record-description">
         <ol>
-            <li>Record a <span>video between 30 seconds and 2 minutes long</span></li>
-            <li>Click <span>Record Screen</span> and select your screen</li>
-            <li>Ensure we can <span>hear you</span> speak</li>
+            <li>Click <span>Record Screen</span> to start</li>
+            <li>Select your screen or window to share</li>
+            <li>Click <span>Add Camera</span> (bottom-right) to show your face</li>
+            <li>Click the <span>red record button</span> to begin</li>
+            <li>Record for <span>30 seconds to 2 minutes</span></li>
         </ol>
     </div>
     <div class="textRight"><button onClick="modalClose()" class="next-button"><img
